[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Player2.gd" type="Script" id=1]
[ext_resource path="res://media/player1.png" type="Texture" id=2]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Jump_02.wav" type="AudioStream" id=3]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Hero_Death_00.wav" type="AudioStream" id=4]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Explosion_02.wav" type="AudioStream" id=5]
[ext_resource path="res://media/chain.png" type="Texture" id=6]
[ext_resource path="res://scenes/PlayerFloat.tres" type="Animation" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 62 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 30 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="KilMonsterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Chain" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 97, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chain"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Chain"]
scale = Vector2( 4.2, 4 )
texture = ExtResource( 6 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "PlayerFloat"
anims/PlayerFloat = ExtResource( 7 )
